force-app/main/default/objects/Contact/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Name of the Account in Text</description>
    <formula>Account.Name</formula>
    <inlineHelpText>Name of the Account in Text</inlineHelpText>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>