force-app/main/default/objects/Contact/fields/alycecom__Most_Recent_Gift_Invitation_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>alycecom__Most_Recent_Gift_Invitation_Create_Date__c</fullName>
    <description>Alyce Most Recent Gift Invitation Create Date</description>
    <inlineHelpText>Alyce Most Recent Gift Invitation Create Date</inlineHelpText>
    <label>Most Recent Gift Invitation Create Date</label>
    <type>DateTime</type>
</CustomField>