force-app/main/default/objects/Contact/fields/alycecom__Most_Recent_Gift_Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>alycecom__Most_Recent_Gift_Landing_Page__c</fullName>
    <description>Alyce Most Recent Gift Invitation Recipient Landing Page</description>
    <inlineHelpText>Alyce Most Recent Gift Invitation Recipient Landing Page</inlineHelpText>
    <label>Most Recent Gift Landing Page</label>
    <type>Url</type>
</CustomField>