force-app/main/default/objects/Contact/fields/AVA__AVAAI_further_action_date__c.field-meta.xml
<CustomField>
    <fullName>AVA__AVAAI_further_action_date__c</fullName>
    <description>Date and time the Contact became a Conversica Further Action lead.</description>
    <inlineHelpText>Date and time the Contact became a Conversica Further Action lead.</inlineHelpText>
    <label>Conversica Further Action Date</label>
    <type>DateTime</type>
</CustomField>