force-app/main/default/objects/Contact/fields/AVA__AVAAI_hot_lead_date__c.field-meta.xml
<CustomField>
    <fullName>AVA__AVAAI_hot_lead_date__c</fullName>
    <description>The date and time the contact became &quot;Hot&quot; in Conversica</description>
    <inlineHelpText>The date and time the contact became &quot;Hot&quot; in Conversica</inlineHelpText>
    <label>Conversica Hot Lead Date</label>
    <type>DateTime</type>
</CustomField>