force-app/main/default/objects/Contact/fields/AVA__AVAAI_last_message_date__c.field-meta.xml
<CustomField>
    <fullName>AVA__AVAAI_last_message_date__c</fullName>
    <description>The date and time Conversica last sent a message to the contact</description>
    <inlineHelpText>The date and time Conversica last sent a message to the contact</inlineHelpText>
    <label>Conversica Last Message Date</label>
    <type>DateTime</type>
</CustomField>