force-app/main/default/objects/Contact/fields/AVA__AVAAI_last_response_date__c.field-meta.xml
<CustomField>
    <fullName>AVA__AVAAI_last_response_date__c</fullName>
    <description>The date and time Conversica last received a response from the contact</description>
    <inlineHelpText>The date and time Conversica last received a response from the contact</inlineHelpText>
    <label>Conversica Last Response Date</label>
    <type>DateTime</type>
</CustomField>