force-app/main/default/objects/Contact/fields/AVA__AVAAI_score__c.field-meta.xml
<CustomField>
    <fullName>AVA__AVAAI_score__c</fullName>
    <description>The Conversica Score of an Conversica lead.</description>
    <label>Deprecated Conversica Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grey</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>