force-app/main/default/objects/Contact/fields/AVA__AVAAI_sms_opt_out__c.field-meta.xml
<CustomField>
    <fullName>AVA__AVAAI_sms_opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Contact indicates they would no longer like to be messaged via SMS after having previously opted in.</description>
    <inlineHelpText>Checked if the Contact indicates they would no longer like to be messaged via SMS after having previously opted in.</inlineHelpText>
    <label>Conversica SMS Opt Out</label>
    <type>Checkbox</type>
</CustomField>