force-app/main/default/objects/Contact/fields/Blocked_Domain__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Domain__c</fullName>
    <description>This formula field uses the data from the blocked domains.</description>
    <formula>Blocked_Domains__c</formula>
    <inlineHelpText>The domain in this field has been blocked and therefore is not allowed to create a case.</inlineHelpText>
    <label>Blocked Domain</label>
    <type>Text</type>
</CustomField>