force-app/main/default/objects/Contact/fields/Blocked_Domains__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Domains__c</fullName>
    <description>This is used with Apex and Flow.</description>
    <inlineHelpText>The domain in this field has been blocked and therefore is not allowed to create a case.</inlineHelpText>
    <label>Blocked Domains</label>
    <length>55</length>
    <type>Text</type>
</CustomField>