force-app/main/default/objects/Contact/fields/Control_Trial_Type__c.field-meta.xml
<CustomField>
    <fullName>Control_Trial_Type__c</fullName>
    <label>Control Trial Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>