force-app/main/default/objects/Contact/fields/CWS_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Assessment_Date__c</fullName>
    <description>The date the partner completed the assessment. The field can be updated manually by any colleague with knowledge of the update or in bulk working with Sales Ops.</description>
    <label>Assessment Date</label>
    <type>Date</type>
</CustomField>