force-app/main/default/objects/Contact/fields/CWS_Auto_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CWS_Auto_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates exception Distributor Contact which will be automatically converted to an Opportunity.</inlineHelpText>
    <label>Auto-Opportunity</label>
    <type>Checkbox</type>
</CustomField>