force-app/main/default/objects/Contact/fields/CWS_ConOwner_Manager__c.field-meta.xml
<CustomField>
    <fullName>CWS_ConOwner_Manager__c</fullName>
    <formula>Owner.Manager.FirstName + &quot; &quot; + Owner.Manager.LastName</formula>
    <label>Contact Owner&apos;s Manager</label>
    <type>Text</type>
</CustomField>