force-app/main/default/objects/Contact/fields/CWS_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Contact_Status__c</fullName>
    <inlineHelpText>Tracks Contact life cycle and hand-offs between BDR and SE/PSE. Inquiry/MAL indicate Contact being worked in Marketo, MQL indicates Contact is ready for BDRs, SAL indicates BDR is working the Contact, SQL indicates the Contact is qualified for SE/PSE.</inlineHelpText>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>MAL</fullName>
            </value>
            <value>
                <fullName>MQL</fullName>
            </value>
            <value>
                <fullName>SAL</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>SQL Working</fullName>
            </value>
            <value>
                <fullName>SQO Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recycled</fullName>
            </value>
            <value>
                <fullName>converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>