force-app/main/default/objects/Contact/fields/CWS_Contact_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>CWS_Contact_Unique_Identifier__c</fullName>
    <displayFormat>CON-{00000000}</displayFormat>
    <label>Contact Unique Identifier</label>
    <type>AutoNumber</type>
</CustomField>