force-app/main/default/objects/Contact/fields/CWS_Control_Trial_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Control_Trial_Purchase_Date__c</fullName>
    <label>Control Trial Purchase Date</label>
    <type>Date</type>
</CustomField>