force-app/main/default/objects/Contact/fields/CWS_Control_Trial_Purchase_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Control_Trial_Purchase_Type__c</fullName>
    <label>Control Trial Purchase Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Churned</fullName>
            </value>
            <value>
                <fullName>Churned to Free</fullName>
            </value>
            <value>
                <fullName>Current Partner</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>