force-app/main/default/objects/Contact/fields/CWS_CW_Login_Email__c.field-meta.xml
<CustomField>
    <fullName>CWS_CW_Login_Email__c</fullName>
    <description>Captures the user email from CW Home</description>
    <inlineHelpText>Captures the user email from CW Home</inlineHelpText>
    <label>CW Login Email</label>
    <type>Email</type>
</CustomField>