force-app/main/default/objects/Contact/fields/CWS_Direct_Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>CWS_Direct_Phone_Extension__c</fullName>
    <label>Direct Phone - Extension</label>
    <length>5</length>
    <type>Text</type>
</CustomField>