force-app/main/default/objects/Contact/fields/CWS_Distributor__c.field-meta.xml
<CustomField>
    <fullName>CWS_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup for the Distributor/Reseller Account. Field is populated based on the Distributor/Reseller Account field from the Lead record that was converted to create the Contact record.</description>
    <inlineHelpText>Indicates the Distributor or Reseller that submitted the Lead that was converted into this Contact.</inlineHelpText>
    <label>Distributor/Reseller Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>