force-app/main/default/objects/Contact/fields/CWS_Do_Not_Merge__c.field-meta.xml
<CustomField>
    <fullName>CWS_Do_Not_Merge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is added to indicate that the contact should not be merged.</description>
    <inlineHelpText>Select this to indicate record should not be merge</inlineHelpText>
    <label>Do Not Merge</label>
    <type>Checkbox</type>
</CustomField>