force-app/main/default/objects/Contact/fields/CWS_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>CWS_Email_Domain__c</fullName>
    <label>Email Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>