force-app/main/default/objects/Contact/fields/CWS_HigherLogic_Security_Group__c.field-meta.xml
<CustomField>
    <fullName>CWS_HigherLogic_Security_Group__c</fullName>
    <description>Determines the security group for the Higher Logic Community</description>
    <inlineHelpText>Determines the security group for the Higher Logic Community</inlineHelpText>
    <label>HigherLogic Security Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HigherLogic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>