force-app/main/default/objects/Contact/fields/CWS_HL_Update_Shipping_Street_Account__c.field-meta.xml
<CustomField>
    <fullName>CWS_HL_Update_Shipping_Street_Account__c</fullName>
    <description>Field on Contact that will capture any Shipping Street change on Account for Higher Logic data capture - Accommodating for account flow-down in Periodic Sync</description>
    <formula>Account.ShippingStreet</formula>
    <inlineHelpText>Field on Contact that will capture any Shipping Street change on Account for Higher Logic data capture - Accommodating for account flow-down in Periodic Sync</inlineHelpText>
    <label>HL Update Shipping Street - Account</label>
    <type>Text</type>
</CustomField>