force-app/main/default/objects/Contact/fields/CWS_HL_User_VCM_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_HL_User_VCM_Expiration_Date__c</fullName>
    <description>Date that will ensure a user no longer has access to the Higher Logic Community</description>
    <inlineHelpText>Date that will ensure a user no longer has access to the Higher Logic Community</inlineHelpText>
    <label>HL User VCM Expiration Date</label>
    <type>Date</type>
</CustomField>