force-app/main/default/objects/Contact/fields/CWS_Integration_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Integration_Sync_Status__c</fullName>
    <description>Field will be used to capture integration status, Will be marked for ready in case of changes in certain fields</description>
    <label>Integration Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready For Sync</fullName>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>