force-app/main/default/objects/Contact/fields/CWS_IsActive_on_HL_VCM__c.field-meta.xml
<CustomField>
    <fullName>CWS_IsActive_on_HL_VCM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this setting is enabled for your integration then for a record to be added to Higher Logic is if this flag is checked.</description>
    <inlineHelpText>If this setting is enabled for your integration then for a record to be added to Higher Logic is if this flag is checked.</inlineHelpText>
    <label>IsActive on HL VCM</label>
    <type>Checkbox</type>
</CustomField>