force-app/main/default/objects/Contact/fields/CWS_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>CWS_Lead_Score__c</fullName>
    <inlineHelpText>Indicates Marketo Lead Score based on defined scoring criteria.</inlineHelpText>
    <label>Lead Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>