force-app/main/default/objects/Contact/fields/CWS_Lead_Source_Details__c.field-meta.xml
<CustomField>
    <fullName>CWS_Lead_Source_Details__c</fullName>
    <label>Lead Source Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>